# Hackwestern

./: .gitignore  AGENT-IMPROVEMENTS-SUMMARY.md  DEVPOSTREADME.md  FIX-DATABASE-NOW.md  PER-POLL-ANALYSIS-FEATURE.md  README.md  SETUP.md  VOTE-CHANGE-FEATURE.md  VOTE-TRACKING-FEATURES.md  VOTING-FIX-SUMMARY.md  WALLET-SUPPORT-GUIDE.md  check-env.py  create-env.sh  create_test_poll.py  fetch_real_proposals.py  fix-all-tables.sql  fix-database-schema.sql  package.json  pnpm-lock.yaml  render.yaml  requirements.txt  simulate_votes_real_proposals.py  simulate_whale_attack.py  test_connection.py  test_real_proposal.py
agents/economic/: agent.py
agents/explainer/: agent.py
agents/orchestrator/: orchestrator.py
agents/whale_watch/: agent.py
app/: layout.tsx  page-real.tsx  page-static-backup.tsx  page.tsx
backend/: main.py
frontend-solana-dapp-ui/: index.html  package-lock.json  package.json  vite.config.ts
frontend-solana-dapp-ui/src/: App.css  App.tsx  main.tsx
frontend-solana-dapp-ui/src/components/: ParticleBackground.tsx  PollCard.tsx  (+1 more)
govai_polls/: Anchor.toml  Cargo.toml  auto-deploy.sh  build.sh  package-lock.json  package.json  rust-toolchain.toml  rust-toolchain.toml.backup  start-validator.sh  test.sh
govai_polls/programs/govai_polls/: Cargo.toml
govai_polls/programs/govai_polls/src/: lib.rs
govai_polls/solana-release/: .crates2.json  version.yml
govai_polls/tests/: govai_polls.ts
hooks/: use-poll-analysis.ts  use-wallet.ts
lib/: api.ts  solana.ts
scripts/: restart-all.sh  start-all.sh  start-backend.sh  start-frontend.sh
(+3 files in other folders)
